[package]
name = "cargo-msrv-table"
version = "0.1.0"
authors = ["Kevin Knapp <knapp@bsibiz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
g-k-crates-io-client = "0.27.1"
clap = "2"
tempdir = "0.3.7"
lazy_static = "1.4.0"
